Prevent money records table from wrapping
Issue #10:
Move away from the "float and clear" approach in favour of "display:
table", which doesn't wrap (floats are designed to wrap)

--- a/moneytracker/static/style.css
+++ b/moneytracker/static/style.css
@@ -50,7 +50,9 @@ body {
 
 #inner-wrapper {
     padding: 25px 20px 10px 20px;
+    /*min-width: 800px;*/
     min-height: 400px;
+    /*overflow: auto;*/
 }
 
 #site-footer {
@@ -92,8 +94,13 @@ body {
 
 /* EVENT MONEY RECORDS PAGE */
 
+.records-table {
+    display: table;
+}
+
 .records-col {
-    float: left;
+    display: table-cell;
+    white-space: nowrap;
 }
 
 .records-col.records-col-numeric {
